@@ -12,11 +12,13 @@ import com.yahoo.vespa.hosted.controller.deployment.Step;
 import org.junit.Test;
 
 import java.time.Instant;
+import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.IntStream;
 
+import static java.util.stream.Collectors.toUnmodifiableList;
 import static org.junit.Assert.assertArrayEquals;
 import static org.junit.Assert.assertEquals;
 
@@ -24,14 +26,16 @@ public class BufferedLogStoreTest {
 
     @Test
     public void chunkingAndFlush() {
+        int chunkSize = 1 << 10;
+        int maxChunks = 1 << 5;
         CuratorDb buffer = new MockCuratorDb();
         RunDataStore store = new MockRunDataStore();
-        BufferedLogStore logs = new BufferedLogStore(buffer, store);
+        BufferedLogStore logs = new BufferedLogStore(chunkSize, chunkSize * maxChunks, buffer, store);
         RunId id = new RunId(ApplicationId.from("tenant", "application", "instance"),
                              JobType.productionUsWest1,
                              123);
 
-        byte[] manyBytes = new byte[BufferedLogStore.chunkSize / 2 + 1]; // One fits, and two (over-)fills.
+        byte[] manyBytes = new byte[chunkSize / 2 + 1]; // One fits, and two (over-)fills.
         Arrays.fill(manyBytes, (byte) 'O');
         LogEntry entry = new LogEntry(0, Instant.ofEpochMilli(123), LogEntry.Type.warning, new String(manyBytes));
 
@@ -39,34 +43,40 @@ public class BufferedLogStoreTest {
         LogEntry entry0 = new LogEntry(0, entry.at(), entry.type(), entry.message());
         LogEntry entry1 = new LogEntry(1, entry.at(), entry.type(), entry.message());
         LogEntry entry2 = new LogEntry(2, entry.at(), entry.type(), entry.message());
+        LogEntry entry3 = new LogEntry(3, entry.at(), entry.type(), entry.message());
+        LogEntry entry4 = new LogEntry(4, entry.at(), entry.type(), entry.message());
 
         assertEquals(Optional.empty(), logs.readFinished(id, -1));
         assertEquals(RunLog.empty(), logs.readActive(id.application(), id.type(), -1));
 
-        logs.append(id.application(), id.type(), Step.deployReal, Collections.singletonList(entry));
+        logs.append(id.application(), id.type(), Step.deployReal, List.of(entry));
         assertEquals(List.of(entry0),
                      logs.readActive(id.application(), id.type(), -1).get(Step.deployReal));
         assertEquals(RunLog.empty(), logs.readActive(id.application(), id.type(), 0));
 
-        logs.append(id.application(), id.type(), Step.deployReal, Collections.singletonList(entry));
+        logs.append(id.application(), id.type(), Step.deployReal, List.of(entry));
         assertEquals(List.of(entry0, entry1),
                      logs.readActive(id.application(), id.type(), -1).get(Step.deployReal));
         assertEquals(List.of(entry1),
                      logs.readActive(id.application(), id.type(), 0).get(Step.deployReal));
         assertEquals(RunLog.empty(), logs.readActive(id.application(), id.type(), 1));
 
-        logs.append(id.application(), id.type(), Step.deployReal, Collections.singletonList(entry));
-        assertEquals(List.of(entry0, entry1, entry2),
+        logs.append(id.application(), id.type(), Step.deployReal, List.of(entry, entry, entry));
+        assertEquals(List.of(entry0, entry1, entry2, entry3, entry4),
                      logs.readActive(id.application(), id.type(), -1).get(Step.deployReal));
-        assertEquals(List.of(entry1, entry2),
+        assertEquals(List.of(entry1, entry2, entry3, entry4),
                      logs.readActive(id.application(), id.type(), 0).get(Step.deployReal));
-        assertEquals(List.of(entry2),
+        assertEquals(List.of(entry2, entry3, entry4),
                      logs.readActive(id.application(), id.type(), 1).get(Step.deployReal));
-        assertEquals(RunLog.empty(), logs.readActive(id.application(), id.type(), 2));
+        assertEquals(List.of(entry3, entry4),
+                     logs.readActive(id.application(), id.type(), 2).get(Step.deployReal));
+        assertEquals(List.of(entry4),
+                     logs.readActive(id.application(), id.type(), 3).get(Step.deployReal));
+        assertEquals(RunLog.empty(), logs.readActive(id.application(), id.type(), 4));
 
-        // We should now have two chunks, with two and one entries.
-        assertEquals(Optional.of(2L), buffer.readLastLogEntryId(id.application(), id.type()));
-        assertArrayEquals(new long[]{0, 2}, buffer.getLogChunkIds(id.application(), id.type()).toArray());
+        // We should now have three chunks, with two, two, and one entries.
+        assertEquals(Optional.of(4L), buffer.readLastLogEntryId(id.application(), id.type()));
+        assertArrayEquals(new long[]{0, 2, 4}, buffer.getLogChunkIds(id.application(), id.type()).toArray());
 
         // Flushing clears the buffer entirely, and stores its aggregated content in the data store.
         logs.flush(id);
@@ -74,13 +84,41 @@ public class BufferedLogStoreTest {
         assertArrayEquals(new long[]{}, buffer.getLogChunkIds(id.application(), id.type()).toArray());
         assertEquals(RunLog.empty(), logs.readActive(id.application(), id.type(), -1));
 
-        assertEquals(List.of(entry0, entry1, entry2),
+        assertEquals(List.of(entry0, entry1, entry2, entry3, entry4),
                      logs.readFinished(id, -1).get().get(Step.deployReal));
-        assertEquals(List.of(entry1, entry2),
+        assertEquals(List.of(entry1, entry2, entry3, entry4),
                      logs.readFinished(id, 0).get().get(Step.deployReal));
-        assertEquals(List.of(entry2),
+        assertEquals(List.of(entry2, entry3, entry4),
                      logs.readFinished(id, 1).get().get(Step.deployReal));
-        assertEquals(Collections.emptyList(), logs.readFinished(id, 2).get().get(Step.deployReal));
+        assertEquals(List.of(entry3, entry4),
+                     logs.readFinished(id, 2).get().get(Step.deployReal));
+        assertEquals(List.of(entry4),
+                     logs.readFinished(id, 3).get().get(Step.deployReal));
+        assertEquals(List.of(), logs.readFinished(id, 4).get().get(Step.deployReal));
+
+        // Logging a large entry enough times to reach the maximum size causes no further entries to be stored.
+        List<LogEntry> monsterLog = IntStream.range(0, 2 * maxChunks + 3)
+                                             .mapToObj(i -> new LogEntry(i, entry.at(), entry.type(), entry.message()))
+                                             .collect(toUnmodifiableList());
+        List<LogEntry> logged = new ArrayList<>(monsterLog);
+        logged.remove(logged.size() - 1);
+        logged.remove(logged.size() - 1);
+        logged.remove(logged.size() - 1);
+        logged.add(new LogEntry(2 * maxChunks, entry.at(), LogEntry.Type.warning, "Max log size of " + ((chunkSize * maxChunks) >> 20) + "Mb exceeded; further entries are discarded."));
+
+        logs.append(id.application(), id.type(), Step.deployReal, monsterLog);
+        assertEquals(logged.size(),
+                     logs.readActive(id.application(), id.type(), -1).get(Step.deployReal).size());
+        assertEquals(logged,
+                     logs.readActive(id.application(), id.type(), -1).get(Step.deployReal));
+
+        logs.flush(id);
+        for (int i = 0; i < 2 * maxChunks + 3; i++)
+            logs.append(id.application(), id.type(), Step.deployReal, List.of(entry));
+        assertEquals(logged.size(),
+                     logs.readActive(id.application(), id.type(), -1).get(Step.deployReal).size());
+        assertEquals(logged,
+                     logs.readActive(id.application(), id.type(), -1).get(Step.deployReal));
     }
 
 }
